# drone-journalist

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  VIDEO_APP_INFRASTRUCTURE.md  VISION_TRACKING_IDENTITY.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-hardware.txt  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  parameters.py
flight/: __init__.py  flight_interface.py  geofence.py  mission_state_machine.py  pymavlink_transport.py  safety_module.py  shot_controller.py  stability_supervisor.py
interfaces/: __init__.py  clock.py  event_bus.py  schemas.py
perception/: __init__.py  adapter.py  geometry.py  identity_lock.py  live_camera.py  parameters.py  schemas.py
product/: __init__.py  adapters.py  config_profiles.py  operator_panel.py  schemas.py  session_log.py
scenarios/: heavy_wind.yaml  lock_loss_recovery.yaml  quick_start.yaml  smoke.yaml  walking_follow.yaml
sim/: __init__.py  interactive_sim.py  param_sweep.py  regression_runner.py  sim_harness.py  visualize_sim.py  visualize_sim_3d.py
tests/: __init__.py  test_flight_interface.py  test_geofence.py  test_integration.py  test_mission_state_machine.py  test_operator_panel.py  test_perception_adapter.py  test_perception_geometry.py  test_perception_identity_lock.py  test_product_adapters.py  test_product_config_profiles.py  test_product_session_log.py  test_pymavlink_transport.py  test_regression.py  test_regression_runner.py  test_safety_module.py  test_shot_controller.py  test_sim_session.py  test_stability_supervisor.py
